[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/model/World.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/table-xl.png" type="Texture" id=2]
[ext_resource path="res://scripts/InfoManager.gd" type="Script" id=3]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Airmail.gd" type="Script" id=5]
[ext_resource path="res://resources/sprites/r-post.png" type="Texture" id=6]
[ext_resource path="res://scenes/DropZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Phaxogram.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/sprites/pictsource.png" type="Texture" id=9]
[ext_resource path="res://scripts/DayEndScreen.gd" type="Script" id=10]
[ext_resource path="res://resources/fonts/PlayfairDisplaySC-Regular.otf" type="DynamicFontData" id=11]
[ext_resource path="res://resources/sprites/add-on.png" type="Texture" id=12]
[ext_resource path="res://scenes/Tweetr.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/fonts/SmallPrintedText.tres" type="DynamicFont" id=14]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="table-xl" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="InfoArea" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 69.0
margin_right = 326.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Transform", "Z Index" ]

[node name="Draggables" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 42.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Map" parent="Draggables" index="0" instance=ExtResource( 4 )]

margin_left = 200.0
margin_top = -190.0
margin_right = 547.0
margin_bottom = 74.0

[node name="Airmail" type="Control" parent="Draggables" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = -221.0
margin_right = 167.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Draggables/Airmail" index="0"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="DropZone2" parent="Draggables" index="2" instance=ExtResource( 7 )]

margin_left = 332.0
margin_top = 119.0
margin_right = 587.0
margin_bottom = 435.0

[node name="DropZone3" parent="Draggables" index="3" instance=ExtResource( 7 )]

margin_left = 383.0
margin_top = 143.0
margin_right = 638.0
margin_bottom = 459.0

[node name="DropZone" parent="Draggables" index="4" instance=ExtResource( 7 )]

margin_left = 352.0
margin_top = 166.0
margin_right = 607.0
margin_bottom = 482.0

[node name="Phaxogram" parent="." index="3" instance=ExtResource( 8 )]

margin_left = 117.0
margin_top = 468.0
margin_right = 157.0
margin_bottom = 508.0

[node name="pictsource" type="Sprite" parent="." index="4"]

position = Vector2( 771.792, 508.539 )
texture = ExtResource( 9 )

[node name="DayEndScreen" type="Control" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 801.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 10 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ColorRect" type="ColorRect" parent="DayEndScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 803.0
margin_bottom = 443.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.566406, 0.566406, 0.566406, 0.718235 )

[node name="DraggableHolder" type="Control" parent="DayEndScreen/ColorRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 220.0
margin_right = 400.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Heading" type="Label" parent="DayEndScreen/ColorRect" index="1"]

modulate = Color( 0.298039, 0.12549, 0.0980392, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = -9.0
margin_right = 800.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Day 1 over!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Label" type="Label" parent="DayEndScreen/ColorRect" index="2"]

modulate = Color( 0.298039, 0.12549, 0.0980392, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 362.0
margin_right = 800.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="add-on" type="Sprite" parent="." index="6"]

position = Vector2( 612.918, 49.7458 )
texture = ExtResource( 12 )

[node name="Tweetr" parent="." index="7" instance=ExtResource( 13 )]

margin_left = 763.0
margin_top = 176.0
margin_right = 763.0
margin_bottom = 176.0
_sections_unfolded = [ "Offset", "Rect", "Transform" ]

[node name="Countdown" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 667.0
margin_top = 30.0
margin_right = 694.0
margin_bottom = 51.0
rect_scale = Vector2( 1.7, 1.7 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.96875, 0.745247, 0.151367, 1 )
text = "60"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="day_ended" from="." to="Phaxogram" method="_on_Main_day_ended"]

[connection signal="day_ended" from="." to="DayEndScreen" method="_on_Main_day_ended"]

[connection signal="day_ended" from="." to="Tweetr" method="_on_Main_day_ended"]

[connection signal="day_started" from="." to="Phaxogram" method="_on_Main_day_started"]

[connection signal="day_started" from="." to="Tweetr" method="_on_Main_day_started"]

[connection signal="message_arrived" from="." to="Phaxogram" method="_on_Main_message_arrived"]

[connection signal="message_arrived" from="." to="Tweetr" method="_on_Main_message_arrived"]

[connection signal="message_arrived" from="." to="InfoArea" method="_on_Main_message_arrived"]


